test/corpus/03-fenced-code.txt
================================================================================
Backtick fence without info string
================================================================================

```
code here
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open)
    (code)
    (code_fence_close)))

================================================================================
Backtick fence with language
================================================================================

```js
console.log('hello');
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close)))

================================================================================
Backtick fence with language and attributes
================================================================================

```javascript {title="example.js"}
const x = 1;
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)
        (attributes)))
    (code)
    (code_fence_close)))

================================================================================
Tilde fence without info string
================================================================================

~~~
some code
~~~

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open)
    (code)
    (code_fence_close)))

================================================================================
Tilde fence with language
================================================================================

~~~python
def hello():
    print("hi")
~~~

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close)))

================================================================================
Tilde fence with language and attributes
================================================================================

~~~typescript {line-numbers}
let y: number = 42;
~~~

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)
        (attributes)))
    (code)
    (code_fence_close)))

================================================================================
Multi-line code content
================================================================================

```go
package main

import "fmt"

func main() {
    fmt.Println("Hello")
}
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close)))

================================================================================
Nested fences with longer outer fence
================================================================================

````markdown
`````python
print("inner")
`````
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with minimum inner length
================================================================================

```markdown
````js
function inner() {
  return "ok";
}
````
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with text and deeper nesting
================================================================================

````txt
This is nice text!

`````js
function doSomething() {

}
`````
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Adjacent fenced blocks with multiple languages
================================================================================

```go
package main
```

```rust
fn main() {}
```

```crystal
puts "hi"
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close))
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close))
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close)))

================================================================================
Nested fences up to five levels
================================================================================

````go
`````rust
``````crystal
```````python
````````js
console.log("deep");
````````
```````
``````
`````
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code
          (fenced_code_block
            (code_fence_open
              (info_string
                (language)))
            (code
              (fenced_code_block
                (code_fence_open
                  (info_string
                    (language)))
                (code
                  (fenced_code_block
                    (code_fence_open
                      (info_string
                        (language)))
                    (code)
                    (code_fence_close)))
                (code_fence_close)))
            (code_fence_close)))
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with sibling blocks
================================================================================

````markdown
`````go
package main
`````
`````rust
fn main() {}
`````
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close))
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with mixed markers
================================================================================

````txt
~~~~~crystal
puts "mixed"
~~~~~
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with siblings and text
================================================================================

````markdown
Intro line.

`````go
package main
`````

Between siblings.

`````rust
fn main() {}
`````
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close))
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with mixed markers to five levels
================================================================================

````txt
~~~~~go
``````rust
~~~~~~~crystal
````````python
print("deep")
````````
~~~~~~~
``````
~~~~~
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code
          (fenced_code_block
            (code_fence_open
              (info_string
                (language)))
            (code
              (fenced_code_block
                (code_fence_open
                  (info_string
                    (language)))
                (code
                  (fenced_code_block
                    (code_fence_open
                      (info_string
                        (language)))
                    (code)
                    (code_fence_close)))
                (code_fence_close)))
            (code_fence_close)))
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with sibling and nested mix
================================================================================

````markdown
`````go
package main
`````

`````rust
``````crystal
puts "nested"
``````
`````
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close))
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code
          (fenced_code_block
            (code_fence_open
              (info_string
                (language)))
            (code)
            (code_fence_close)))
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Nested fences with text and language mix
================================================================================

````markdown
Intro line.

`````go
package main
`````

Trailing line.
````

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code
      (fenced_code_block
        (code_fence_open
          (info_string
            (language)))
        (code)
        (code_fence_close)))
    (code_fence_close)))

================================================================================
Empty code block
================================================================================

```

```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open)
    (code)
    (code_fence_close)))

================================================================================
Code block with heading after
================================================================================

```bash
echo "test"
```

# Heading

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close))
  (heading
    (heading_marker)
    (heading_text)))

================================================================================
Code block with paragraph after
================================================================================

```
code
```

Some text here.

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open)
    (code)
    (code_fence_close))
  (paragraph
    (text)))

================================================================================
Mixed backticks and content
================================================================================

```js
const str = "```";
const re = /```/;
```

--------------------------------------------------------------------------------

(source_file
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close)))

================================================================================
Code block with frontmatter
================================================================================
---
title: Code Example
---

```ruby
puts "Hello"
```

--------------------------------------------------------------------------------

(source_file
  (frontmatter
    (yaml))
  (fenced_code_block
    (code_fence_open
      (info_string
        (language)))
    (code)
    (code_fence_close)))
