test/corpus/04-markdoc-tags.txt
================================================================================
Self-closing tag
================================================================================

{% image /%}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_self_close
      (tag_open_delimiter)
      (tag_name)
      (tag_self_close_delimiter))))

================================================================================
Block tag without content
================================================================================

{% callout %}
{% /callout %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Block tag with paragraph content
================================================================================

{% callout %}
Hello world
{% /callout %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (paragraph
      (text))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Block tag with multiple paragraphs
================================================================================

{% section %}
First paragraph.

Second paragraph.
{% /section %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (paragraph
      (text))
    (paragraph
      (text))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Nested block tags
================================================================================

{% outer %}
{% inner %}
Content
{% /inner %}
{% /outer %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (markdoc_tag
      (tag_open
        (tag_open_delimiter)
        (tag_name)
        (tag_block_close))
      (paragraph
        (text))
      (tag_close
        (tag_open_delimiter)
        (tag_name)
        (inline_expression_close)))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Tag with string attribute
================================================================================

{% card title="Welcome" %}
{% /card %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value
          (value_expression
            (json_value
              (string)))))
      (tag_block_close))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Tag with multiple attributes
================================================================================

{% button type="primary" size="large" %}
Click me
{% /button %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value
          (value_expression
            (json_value
              (string)))))
      (attribute
        (attribute_name)
        (attribute_value
          (value_expression
            (json_value
              (string)))))
      (tag_block_close))
    (paragraph
      (text))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Self-closing tag with attributes
================================================================================

{% image src="photo.jpg" alt="A photo" /%}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_self_close
      (tag_open_delimiter)
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value
          (value_expression
            (json_value
              (string)))))
      (attribute
        (attribute_name)
        (attribute_value
          (value_expression
            (json_value
              (string)))))
      (tag_self_close_delimiter))))

================================================================================
Simple inline expression
================================================================================

Hello {% $name %}

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (inline_expression
      (tag_open_delimiter)
      (variable_value
        (variable_reference
          (variable
            (identifier))))
      (inline_expression_close))))

================================================================================
Inline expression with property access
================================================================================

Hello {% $user.name %}

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (inline_expression
      (tag_open_delimiter)
      (variable_value
        (variable_reference
          (variable
            (identifier))
          (identifier)))
      (inline_expression_close))))

================================================================================
Multiple inline expressions in paragraph
================================================================================

{% $greeting %} {% $name %}!

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_expression
      (tag_open_delimiter)
      (variable_value
        (variable_reference
          (variable
            (identifier))))
      (inline_expression_close))
    (text)
    (inline_expression
      (tag_open_delimiter)
      (variable_value
        (variable_reference
          (variable
            (identifier))))
      (inline_expression_close))
    (text)))

================================================================================
Tag with heading inside
================================================================================

{% section %}
# Heading
Content here
{% /section %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (heading
      (heading_marker)
      (heading_text))
    (paragraph
      (text))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Tag with code block inside
================================================================================

{% example %}
```js
code()
```
{% /example %}

--------------------------------------------------------------------------------

(source_file
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (fenced_code_block
      (code_fence_open
        (info_string
          (language)))
      (code)
      (code_fence_close))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))

================================================================================
Mixed content with tags and expressions
================================================================================

# Title

{% callout %}
Important: {% $message %}
{% /callout %}

Regular {% $text %} here.

--------------------------------------------------------------------------------

(source_file
  (heading
    (heading_marker)
    (heading_text))
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (paragraph
      (text)
      (inline_expression
        (tag_open_delimiter)
        (variable_value
          (variable_reference
            (variable
              (identifier))))
        (inline_expression_close)))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close)))
  (paragraph
    (text)
    (inline_expression
      (tag_open_delimiter)
      (variable_value
        (variable_reference
          (variable
            (identifier))))
      (inline_expression_close))
    (text)))

================================================================================
Tag with frontmatter
================================================================================
---
title: Demo
---

{% callout %}
Hello
{% /callout %}

--------------------------------------------------------------------------------

(source_file
  (frontmatter
    (yaml))
  (markdoc_tag
    (tag_open
      (tag_open_delimiter)
      (tag_name)
      (tag_block_close))
    (paragraph
      (text))
    (tag_close
      (tag_open_delimiter)
      (tag_name)
      (inline_expression_close))))
